Add extra packages

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 
 \usepackage{times}
 
-% Optional math commands from https://github.com/goodfeli/dlbook_notation.
+\input{extra_pkgs}
 \input{math_commands}
 
 \title{}
