--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,12 @@
 \input{extra_pkgs}
 \input{math_commands}
 
+\usepackage{physics}
+\usepackage{mathtools}
+\DeclarePairedDelimiter\p{(}{)}
+\DeclarePairedDelimiter\n{|}{|}
+\DeclarePairedDelimiter\B{[}{]}
+
 \title{}
 
 \author{Bojian Zheng \\
