Add more math commands

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,10 @@
 \usepackage{mathtools}
 \DeclarePairedDelimiter\p{(}{)}
 \DeclarePairedDelimiter\n{|}{|}
-\DeclarePairedDelimiter\B{[}{]}
+\DeclarePairedDelimiter\sqb{[}{]}
+\DeclarePairedDelimiter\cb{\{}{\}}
+\newcommand{\given}{\;\middle|\;}
+\newcommand{\Op}[1]{\operatorname{#1}}
 
 \title{}
 
