Add mailto prefix

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 
 \author{Bojian Zheng \\
   University of Toronto \\
-  \texttt{bojian@cs.toronto.edu}
+  \href{mailto:bojian@cs.toronto.edu}{\texttt{bojian@cs.toronto.edu}}
 }
 
 \newcommand{\fix}{\marginpar{FIX}}
