Update the extra packages

--- a/extra_pkgs.tex
+++ b/extra_pkgs.tex
@@ -7,7 +7,7 @@
 \usepackage{xurl}
 % Figures and Tables
 \usepackage{graphicx}
-\usepackage{booktabs, tabularx, multirow}
+\usepackage{booktabs, multirow}
 % Monospaced Code Blocks
 \usepackage{listings}
 % Math Packages
