--- a/extra_pkgs.tex
+++ b/extra_pkgs.tex
@@ -1,5 +1,6 @@
 \usepackage[ruled]{algorithm2e}
 \usepackage{courierten}
+\usepackage[T1]{fontenc}
 \usepackage{hyperref}
 \usepackage{microtype}
 \usepackage{pifont}
