--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,10 @@
 
 \title{}
 
-\author{Bojian Zheng \\
-  University of Toronto \\
-  \href{mailto:bojian@cs.toronto.edu}{\texttt{bojian@cs.toronto.edu}}
+\author{
+    Bojian Zheng \\
+    University of Toronto \\
+    \href{mailto:bojian@cs.toronto.edu}{\texttt{bojian@cs.toronto.edu}}
 }
 
 \newcommand{\fix}{\marginpar{FIX}}
