--- a/main.tex
+++ b/main.tex
@@ -22,8 +22,7 @@
 
 \title{}
 
-\author{
-    Bojian Zheng \\
+\author{Bojian Zheng \\
     University of Toronto \\
     \href{mailto:bojian@cs.toronto.edu}{\texttt{bojian@cs.toronto.edu}}
 }
